--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
+    "config": "ts-node ./src/scripts/script.ts",
+    "start": "serve",
+    "build": "build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
@@ -32,12 +33,14 @@
     "@angular/compiler-cli": "^14.2.0",
     "@types/crypto-js": "^4.1.1",
     "@types/jasmine": "~4.0.0",
+    "dotenv": "^16.0.3",
     "jasmine-core": "~4.3.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
-    "typescript": "~4.7.2"
+    "typescript": "~4.7.2",
+    "yargs": "^17.6.2"
   }
 }
