--- a/package.json
+++ b/package.json
@@ -3,27 +3,25 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "config": "ts-node ./src/scripts/script.ts",
-    "start": "serve",
-    "build": "build",
+    "start": "ng serve",
+    "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
   "private": true,
   "dependencies": {
-    "@angular-builders/custom-webpack": "^15.0.0",
-    "@angular/animations": "^15.0.4",
-    "@angular/cdk": "^15.0.4",
-    "@angular/common": "^15.0.4",
-    "@angular/compiler": "^15.0.4",
-    "@angular/core": "^15.0.4",
-    "@angular/forms": "^15.0.4",
-    "@angular/material": "^14.2.7",
-    "@angular/platform-browser": "^15.0.4",
-    "@angular/platform-browser-dynamic": "^15.0.4",
-    "@angular/router": "^15.0.4",
+    "@angular-builders/custom-webpack": "^14.1.0",
+    "@angular/animations": "^14.2.0",
+    "@angular/cdk": "^14.2.1",
+    "@angular/common": "^14.2.0",
+    "@angular/compiler": "^14.2.0",
+    "@angular/core": "^14.2.0",
+    "@angular/forms": "^14.2.0",
+    "@angular/material": "^14.2.1",
+    "@angular/platform-browser": "^14.2.0",
+    "@angular/platform-browser-dynamic": "^14.2.0",
+    "@angular/router": "^14.2.0",
     "@auth0/angular-jwt": "^5.1.2",
-    "@types/node": "^18.11.18",
     "crypto-js": "^4.1.1",
     "dotenv-webpack": "^8.0.1",
     "rxjs": "~7.5.0",
@@ -31,9 +29,9 @@
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^15.0.5",
-    "@angular/cli": "~15.0.5",
-    "@angular/compiler-cli": "^15.0.4",
+    "@angular-devkit/build-angular": "^14.2.2",
+    "@angular/cli": "~14.2.2",
+    "@angular/compiler-cli": "^14.2.0",
     "@types/crypto-js": "^4.1.1",
     "@types/jasmine": "~4.0.0",
     "dotenv": "^16.0.3",
@@ -43,7 +41,7 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
-    "typescript": "~4.8.4",
+    "typescript": "~4.7.2",
     "yargs": "^17.6.2"
   }
 }
